kubernetes-manifest/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: three-tier
  labels:
    app: frontend

spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      imagePullSecrets:
        - name: ecr-secret

      containers:
        - name: frontend-app

          image: 503026942664.dkr.ecr.ap-south-1.amazonaws.com/mohalla-frontend:2

          ports:
            - containerPort: 8080
              protocol: TCP

          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false

            capabilities:
              drop:
                - ALL

          resources:
            requests:
              cpu: 50m
              memory: 64Mi

            limits:
              cpu: 200m
              memory: 256Mi

          startupProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 30
            periodSeconds: 5
            timeoutSeconds: 2

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
